# harness

./: .gitignore  README.md  cli.py  development_path.txt  diagram_init.txt  documentation_init.txt  pyproject.toml
docs/: INDEX.md
docs/diagrams/: 01_architecture_overview.drawio  02_sequence_agent_interaction.drawio  03_state_machine_feature.drawio  04_flowchart_gan_loop.drawio  05_data_flow.drawio  06_cicd_pipeline.drawio
docs/operational/: deployment_guide.md  runbook.md
docs/product/: PRD.md  user_stories.md
docs/technical/: ADR.md  animation_theme_agent_guide.md  api_reference.md  architecture.md
docs/testing/: test_cases.md  test_plan.md
examples/: game.yaml  web_app.yaml
harness/: __init__.py  auto_resume.py  config.py  import_repo.py  orchestrator.py  preflight.py  project_git.py  runner_profiles.py
harness/agents/: __init__.py  base.py  evaluator.py  generator.py  initializer.py  planner.py  reviewer.py
harness/context/: __init__.py  handoff.py  reset.py
harness/progress/: __init__.py  models.py  tracker.py
harness/runners/: __init__.py  _rate_limit.py  api_runner.py  base.py  codex_runner.py  gemini_api_runner.py  openai_api_runner.py  openrouter_api_runner.py  sdk_runner.py  subprocess_runner.py
harness/session/: __init__.py  opener.py
tests/: test_agents.py  test_auto_resume.py  test_cli.py  test_cross_platform.py  test_env_layers.py  test_handoff.py  test_import_repo.py  test_initializer.py  test_orchestrator.py  test_preflight.py  test_progress.py  test_project_git.py  test_reviewer.py  test_runners.py  test_spinner.py
(+2 files in other folders)
